--- a/src/app/modules/docente-capacitador/reportes/pages/reportes/reportes.component.html
+++ b/src/app/modules/docente-capacitador/reportes/pages/reportes/reportes.component.html
@@ -41,6 +41,7 @@
     <!-- /Breadcrumb -->
 
     <div class="row">
+        <!-- //desde aqui -->
         <div class="col-md-4 col-xl-3">
             <div class="card bg-c-blue order-card" (click)="tipoReporte(1)"
                 (click)="showContainer2 = false; showContainer3 = true;">
@@ -56,6 +57,7 @@
                 </div>
             </div>
         </div>
+        <!-- hasata aqui -->
         <div class="col-md-4 col-xl-3">
             <div class="card bg-c-blue order-card" (click)="tipoReporte(1)"
                 (click)="showContainer2 = false; showContainer4 = true;">
@@ -63,6 +65,21 @@
                     <h6 class="m-b-20">Tipo de Reporte</h6>
                     <h2 class="text-right"><i class="fa fa-graduation-cap f-left"></i><span
                             style="font-size: 25px;">Informe Asistencia de Curso</span>
+                    </h2>
+                    <div style="margin-bottom: 10px;">
+                    </div>
+                    <div style="margin-bottom: 10px;">
+                    </div>
+                </div>
+            </div>
+        </div>
+        <div class="col-md-4 col-xl-3">
+            <div class="card bg-c-blue order-card" (click)="tipoReporte(1)"
+                (click)="showContainer2 = false; showContainer4 = true;">
+                <div class="card-block">
+                    <h6 class="m-b-20">Tipo de Reporte</h6>
+                    <h2 class="text-right"><i class="fa fa-graduation-cap f-left"></i><span
+                            style="font-size: 25px;">Ver Silabo del Curso</span>
                     </h2>
                     <div style="margin-bottom: 10px;">
                     </div>
