--- a/src/app/modules/docente-capacitador/register-notas/pages/register-notas/register-notas.component.html
+++ b/src/app/modules/docente-capacitador/register-notas/pages/register-notas/register-notas.component.html
@@ -1,1 +1,164 @@
-<p>register-notas works!</p>
+<link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css" rel="stylesheet">
+<br>
+<div class="container1" *ngIf="showContainer1">
+    <div class="row">
+        <div class="col-md-4 col-xl-3" *ngFor="let curso of cursosList">
+            <div class="card bg-c-blue order-card" (click)="showContainer2 = true; showContainer1 = false; mostrarParticipante(curso.curId)">
+                <div class="card-block">
+                    <h6 class="m-b-20">Codigo: {{curso.curCodigo}}</h6>
+                    <h2 class="text-right"><i class="fa fa-graduation-cap f-left"></i><span>{{curso.curNombre}}</span>
+                    </h2>
+                    <div style="margin-bottom: 10px;">
+                        <h3 class="val"><span class="f-right">{{curso.curFechainicio | date:
+                                'dd/MM/yyyy'}}</span>Inicia</h3>
+                        <h3 class="val"><span class="f-right">{{curso.curFechafin | date:
+                                'dd/MM/yyyy'}}</span>Termina</h3>
+                    </div>
+                    <div style="margin-bottom: 10px;">
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+</div>
+<div class="container2" *ngIf="showContainer2">
+        <!-- Breadcrumb -->
+        <nav aria-label="breadcrumb" class="main-breadcrumb">
+            <ol class="breadcrumb">
+                <li class="breadcrumb-item"><a (click)="showContainer1 = true; showContainer2 = false;">Cursos</a></li>
+                <li class="breadcrumb-item"><a>Registrar Notas</a></li>
+            </ol>
+        </nav>
+        <!-- /Breadcrumb -->
+        <div class="main-body">
+            <div class="row">
+                <div class="col-lg-4">
+
+                    <div class="card">
+                        <div class="card-body">
+                            <div class="d-flex flex-column align-items-center text-center">
+                                <img src="https://e7.pngegg.com/pngimages/575/29/png-clipart-computer-icons-instructor-led-training-course-education-toolbox-miscellaneous-blue.png"
+                                    alt="Admin" class="rounded-circle" width="150">
+                                <div class="mt-3">
+
+                                    <svg xmlns="http://www.w3.org/2000/svg" width="22" height="22" fill="currentColor"
+                                        class="bi bi-award-fill" viewBox="0 0 16 16">
+                                        <path
+                                            d="m8 0 1.669.864 1.858.282.842 1.68 1.337 1.32L13.4 6l.306 1.854-1.337 1.32-.842 1.68-1.858.282L8 12l-1.669-.864-1.858-.282-.842-1.68-1.337-1.32L2.6 6l-.306-1.854 1.337-1.32.842-1.68L6.331.864 8 0z" />
+                                        <path
+                                            d="M4 11.794V16l4-1 4 1v-4.206l-2.018.306L8 13.126 6.018 12.1 4 11.794z" />
+                                    </svg>
+                                    <h4>Notas del Estudiante</h4>
+                                    <p class="text-secondary mb-1">{{participante.parPersona?.nombre}} {{participante.parPersona?.apellido}}</p>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+
+                </div>
+                <div class="col-lg-8">
+                    <div class="card">
+                        <div class="card-body">
+                            <h4 style="text-align: center;">Registro de Notas</h4>
+                            <br>
+                            <form>
+                                <div class="row mb-3">
+                                    <div class="col-sm-3">
+                                        <h6 class="mb-0">Estado del Estudiante</h6>
+                                    </div>
+                                    <div class="col-sm-9 text-secondary">
+                                        <input type="text" class="form-control" id="inputCedula"
+                                            placeholder="Ingrese el nombre del programa" name="cedula"
+                                            [(ngModel)]="participante.parEstadoaprovacion">
+                                    </div>
+                                </div>
+
+                                <div class="row mb-3">
+                                    <div class="col-sm-3">
+                                        <h6 class="mb-0">Nota Parcial</h6>
+                                    </div>
+                                    <div class="col-sm-9 text-secondary">
+                                        <input type="number" class="form-control" id="inputNparcial"
+                                            placeholder="Ingrese la nota del 1er Parcial" name="notaParcial"
+                                            [(ngModel)]="participante.parNotaparcial">
+                                    </div>
+                                </div>
+                                <div class="row mb-3">
+                                    <div class="col-sm-3">
+                                        <h6 class="mb-0">Nota Final</h6>
+                                    </div>
+                                    <div class="col-sm-9 text-secondary">
+                                        <input type="number" class="form-control" id="inputNfinal"
+                                            placeholder="Ingrese la nota Final" name="notafinal"
+                                            [(ngModel)]="participante.parNotafinal">
+                                    </div>
+                                </div>
+                                <div class="row mb-3">
+                                    <div class="col-sm-3">
+                                        <h6 class="mb-0">Promedio</h6>
+                                    </div>
+                                    <div class="col-sm-9 text-secondary">
+                                        <input type="number" class="form-control" id="inputPromedio"
+                                            placeholder="Ingrese la nota del 1er Parcial" name="promedio"
+                                            [(ngModel)]="participante.parPromedio">
+                                    </div>
+                                </div>
+
+                                <div class="row mb-3">
+                                    <div class="col-sm-3">
+                                        <h6 class="mb-0">Observaciones</h6>
+                                    </div>
+                                    <div class="col-sm-9 text-secondary">
+                                        <input type="text" class="form-control" id="inputObservaciones"
+                                            placeholder="Ingrese las observaciones del Estudiante" name="Obcervaciones"
+                                            [(ngModel)]="participante.parObservacion">
+                                    </div>
+                                </div>
+
+                                <div class="row">
+                                    <div class="col-sm-3"></div>
+                                    <div class="col-sm-9 text-secondary">
+                                        <Span></Span> <button (click)="savenotas(participante)">Guardar Cambios</button>
+                                    </div>
+                                </div>
+                            </form>
+                        </div>
+                    </div>
+
+                </div>
+            </div>
+        </div>
+
+        <br><br>
+        <!-- Tablaaaaaa -->
+        <table class="table">
+            <thead class="thead-dark">
+                <tr>
+                    <th scope="col">#</th>
+                    <th scope="col">Estudiante</th>
+                    <th scope="col">Nota 1er Parcial</th>
+                    <th scope="col">Nota Final</th>
+                    <th scope="col">Promedio</th>
+                    <th scope="col">Observaciones</th>
+                    <th scope="col">Estado</th>
+                    <th scope="col">editar</th>
+                </tr>
+            </thead>
+            <tbody>
+                <tr *ngFor="let participante of participantesList">
+                    <th>{{ participante.parId }}</th>
+                    <td>{{ participante.parPersona.nombre +' '+ participante.parPersona.apellido }}</td>
+                    <td>{{ participante.parNotaparcial}}</td>
+                    <td>{{ participante.parNotafinal }}</td>
+                    <td>{{ participante.parPromedio }}</td>
+                    <td>{{ participante.parObservacion }}</td>
+                    <td>{{ participante.parEstadoaprovacion }}</td>
+                    <td>
+                        <button type="button" class="btn btn-primary"
+                            (click)="editarNotas(participante)">
+                            Editar</button>
+                    </td>
+                </tr>
+            </tbody>
+        </table>
+    </div>
