--- a/src/app/shared/components/side-bar-admin/side-bar-admin.component.html
+++ b/src/app/shared/components/side-bar-admin/side-bar-admin.component.html
@@ -217,6 +217,25 @@
           <span> Administrador</span>
         </a>
       </li><!-- End Dashboard Nav -->
+      
+      <li class="nav-item">
+        <a class="nav-link collapsed" data-bs-target="#perfil-nav" data-bs-toggle="collapse" href="#">
+          <i class="bi bi-journal-text"></i><span>Perfil Administrador </span><i class="bi bi-chevron-down ms-auto"></i>
+        </a>
+        <ul id="perfil-nav" class="nav-content collapse " data-bs-parent="#sidebar-nav">
+          <li>
+            <a (click)="goTo_visperfil($event)">
+              <i class="bi bi-circle"></i><span>Vista Perfil</span>
+            </a>
+          </li>
+          <li>
+            <a  (click)="goTo_ediperfil($event)">
+              <i class="bi bi-circle"></i><span>Edición Perfil</span>
+            </a>
+          </li>
+         
+        </ul>
+      </li><!-- End perfil Nav -->
 
       <li class="nav-item">
         <a class="nav-link collapsed" data-bs-target="#components-nav" data-bs-toggle="collapse" href="#">
@@ -228,19 +247,19 @@
               <i class="bi bi-circle"></i><span>Registrar Programa</span>
             </a>
           </li>
-          <li>
+          <!-- <li>
             <a  (click)="goTo_edit_list_curs($event)">
               <i class="bi bi-circle"></i><span>Editar Cursos</span>
             </a>
-          </li>
-          <li>
+          </li> -->
+          <!-- <li>
             <a  (click)="goTo_edit_list_curs($event)">
               <i class="bi bi-circle"></i><span>Listar Cursos</span>
             </a>
-          </li>
+          </li> -->
           <li>
             <a  (click)="goTo_catalogocurso($event)">
-              <i class="bi bi-circle"></i><span>Catalogo Cursos</span>
+              <i class="bi bi-circle"></i><span>Catalogo</span>
             </a>
           </li>
          
