--- a/src/app/modules/docente-capacitador/edit-dts-docentes/pages/edit-dts-docentes/edit-dts-docentes.component.html
+++ b/src/app/modules/docente-capacitador/edit-dts-docentes/pages/edit-dts-docentes/edit-dts-docentes.component.html
@@ -56,8 +56,13 @@
                                     <h6 class="mb-0">Nombres</h6>
                                 </div>
                                 <div class="col-sm-9 text-secondary">
-                                    <input type="text" class="form-control" id="inputNombre"
-                                        placeholder="Ingrese su nombre" name="nombre" [(ngModel)]="persona.nombre">
+                                    <input type="text" 
+                                        class="form-control" 
+                                        id="inputNombre"
+                                        placeholder="Ingrese su nombre" 
+                                        name="nombre" 
+                                        [(ngModel)]="persona.nombre" }
+                                        (keydown)="validarInputNombre()">
                                 </div>
                             </div>
 
