--- a/src/app/modules/docente-capacitador/edit-list-asistencia/pages/edit-list-asistencia/edit-list-asistencia.component.html
+++ b/src/app/modules/docente-capacitador/edit-list-asistencia/pages/edit-list-asistencia/edit-list-asistencia.component.html
@@ -1,11 +1,44 @@
-<div class="container" style="background-color: #ffffff;">
+<link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css" rel="stylesheet">
+<br>
+<div class="container1" *ngIf="showContainer1">
     <h4 style="text-align: center;">JUSTIFICACIÓN DE FALTAS</h4>
+    <br>
+    <div class="row">
+        <div class="col-md-4 col-xl-3" *ngFor="let curso of cursosList">
+            <div class="card bg-c-blue order-card" (click)="selectCurso(curso.curId)">
+                <div class="card-block">
+                    <h6 class="m-b-20">Codigo: {{curso.curCodigo}}</h6>
+                    <h2 class="text-right"><i class="fa fa-graduation-cap f-left"></i><span>{{curso.curNombre}}</span>
+                    </h2>
+                    <div style="margin-bottom: 10px;">
+                        <h3 class="val"><span class="f-right">{{curso.curFechainicio | date:
+                                'dd/MM/yyyy'}}</span>Inicia</h3>
+                        <h3 class="val"><span class="f-right">{{curso.curFechafin | date:
+                                'dd/MM/yyyy'}}</span>Termina</h3>
+                    </div>
+                    <div style="margin-bottom: 10px;">
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+</div>
+<div class="container" style="background-color: #ffffff;">
+    
 
 
 
     <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css" rel="stylesheet">
 
-    <div class="container" *ngIf="showContainer1">
+    <div class="container" *ngIf="showContainer2">
+        <!-- Breadcrumb -->
+        <nav aria-label="breadcrumb" class="main-breadcrumb">
+            <ol class="breadcrumb">
+                <li class="breadcrumb-item"><a (click)="showContainer1 = true; showContainer2 = false; showContainer3 = false; showContainer4 = false;">Cursos</a></li>
+                <li class="breadcrumb-item"><a>Estudiantes</a></li>
+            </ol>
+        </nav>
+        <!-- /Breadcrumb -->
         <br>
         <h5>Listado de estudiantes</h5>
         <br>
@@ -18,8 +51,8 @@
                 </tr>
             </thead>
             <tbody>
-                <tr  *ngFor="let item of participantes" (click)="mostrarAsistencias(item.participante.parId)">
-                    
+                <tr *ngFor="let item of participantes" (click)="mostrarAsistencias(item.participante.parId)">
+
                     <td>{{ item.participante.parPersona?.cedula }}</td>
                     <td>{{ item.participante.parPersona?.apellido }}</td>
                     <td>{{ item.participante.parPersona?.nombre }}</td>
@@ -29,59 +62,65 @@
     </div>
 </div>
 <div class="container" style="background-color: #ffffff;">
-<div class="container2" *ngIf="showContainer2">
-    <!-- Breadcrumb -->
-    <nav aria-label="breadcrumb" class="main-breadcrumb">
-        <ol class="breadcrumb">
-            <li class="breadcrumb-item"><a (click)="showContainer1 = true; showContainer2 = false;">Estudiantes</a></li>
-            <li class="breadcrumb-item"><a>Faltas</a></li>
-        </ol>
-    </nav>
-    <!-- /Breadcrumb -->
-
-    <div class="row">
-        <div class="col-md-12 col-xl-12">
-            <div class="container" style="background-color: #ffffff;">
-                <br>
-                <h5>Listado de estudiantes</h5>
-                <table class="table">
-                    <thead>
-                        <tr class="bg-primary text-light">
-                            <th scope="col">Cédula</th>
-                            <th scope="col">Estudiante</th>
-                            <th scope="col">Fecha</th>
-                            <th scope="col">Horas/Falta</th>
-                            <th scope="col">Acción</th>
-                        </tr>
-                    </thead>
-                    <tbody>
-                        <tr *ngFor="let item of asistencias">
-                            <td>{{ item.asiParticipante.parPersona?.cedula }}</td>
-                            <td>{{ item.asiParticipante.parPersona?.apellido }} {{
-                                item.asiParticipante.parPersona?.nombre }}</td>
-                            <td>{{ item.asiFecha | date: 'dd/MM/yyyy' }}</td>
-                            <td>{{ item.asiNumfaltas }}</td>
-                            <td>
-                                <button class="btn btn-primary"
-                                    (click)="mostrarAsistenciaEnEdicion(item)">Justificar</button>
-                            </td>
-                        </tr>
-                    </tbody>
-                </table>
-            </div>
-        </div>
-    </div>
-</div>
-</div>
-<div class="container" style="background-color: #ffffff;">
-    <div class="container3" *ngIf="showContainer3">
+    <div class="container2" *ngIf="showContainer3">
         <!-- Breadcrumb -->
         <nav aria-label="breadcrumb" class="main-breadcrumb">
             <ol class="breadcrumb">
                 <li class="breadcrumb-item"><a
-                        (click)="showContainer1 = true; showContainer2 = false; showContainer3 = false">Estudiantes</a>
+                        (click)="showContainer1 = true; showContainer2 = false; showContainer3 = false; showContainer4 = false;">Cursos</a>
                 </li>
-                <li class="breadcrumb-item"><a (click)="showContainer2 = true; showContainer3 = false">Faltas</a></li>
+                <li class="breadcrumb-item"><a
+                        (click)="showContainer1 = false; showContainer2 = true; showContainer3 = false; showContainer4 = false;">Estudiantes</a>
+                </li>
+                <li class="breadcrumb-item"><a>Faltas</a></li>
+            </ol>
+        </nav>
+        <!-- /Breadcrumb -->
+
+        <div class="row">
+            <div class="col-md-12 col-xl-12">
+                <div class="container" style="background-color: #ffffff;">
+                    <br>
+                    <h5>Listado de estudiantes</h5>
+                    <table class="table">
+                        <thead>
+                            <tr class="bg-primary text-light">
+                                <th scope="col">Cédula</th>
+                                <th scope="col">Estudiante</th>
+                                <th scope="col">Fecha</th>
+                                <th scope="col">Horas/Falta</th>
+                                <th scope="col">Acción</th>
+                            </tr>
+                        </thead>
+                        <tbody>
+                            <tr *ngFor="let item of asistencias">
+                                <td>{{ item.asiParticipante.parPersona?.cedula }}</td>
+                                <td>{{ item.asiParticipante.parPersona?.apellido }} {{
+                                    item.asiParticipante.parPersona?.nombre }}</td>
+                                <td>{{ item.asiFecha | date: 'dd/MM/yyyy' }}</td>
+                                <td>{{ item.asiNumfaltas }}</td>
+                                <td>
+                                    <button class="btn btn-primary"
+                                        (click)="mostrarAsistenciaEnEdicion(item)">Justificar</button>
+                                </td>
+                            </tr>
+                        </tbody>
+                    </table>
+                </div>
+            </div>
+        </div>
+    </div>
+</div>
+<div class="container" style="background-color: #ffffff;">
+    <div class="container3" *ngIf="showContainer4">
+        <!-- Breadcrumb -->
+        <nav aria-label="breadcrumb" class="main-breadcrumb">
+            <ol class="breadcrumb">
+                <li class="breadcrumb-item"><a (click)="showContainer1 = true; showContainer2 = false; showContainer3 = false; showContainer4 = false">Cursos</a></li>
+                <li class="breadcrumb-item"><a (click)="showContainer1 = false; showContainer2 = true; showContainer3 = false; showContainer4 = false">Estudiantes</a></li>
+                <li class="breadcrumb-item"><a (click)="showContainer1 = false; showContainer2 = false; showContainer3 = true; showContainer4 = false">Faltas</a></li>
+                <li class="breadcrumb-item"><a >Justificar</a>
+                </li>
             </ol>
         </nav>
         <!-- /Breadcrumb -->
