--- a/src/app/modules/docente-capacitador/register-asistencia/pages/register-asistencia/register-asistencia.component.html
+++ b/src/app/modules/docente-capacitador/register-asistencia/pages/register-asistencia/register-asistencia.component.html
@@ -1,25 +1,64 @@
-<div class="container" style="background-color: #ffffff;">
-  <h4>LISTADO DE ESTUDIANTES</h4>
-  <table class="table">
-    <thead>
-      <tr class="bg-primary text-light">
-        <th scope="col">Cédula</th>
-        <th scope="col">Nombre y apellido</th>
-        <th scope="col">Faltas</th>
-      </tr>
-    </thead>
-    <tbody>
-      <tr *ngFor="let item of participantes">
-        <td>{{ item.participante.parPersona?.cedula }}</td>
-        <td>{{ item.participante.parPersona?.apellido }} {{ item.participante.parPersona?.nombre }}</td>
-        <td>
-          <input type="number" [(ngModel)]="item.asistencia.asiNumfaltas" class="form-control" min="0" pattern="[0-9]+" />
-        </td>
-         
-      </tr>
-      
-    </tbody>
-  </table>
-  
-  <button (click)="registrarAsistencias()" class="btn btn-primary">Guardar asistencias</button>
+<link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css" rel="stylesheet">
+<br>
+<div class="container1" *ngIf="showContainer1">
+  <div class="row">
+    <div class="col-md-4 col-xl-3" *ngFor="let curso of cursosList">
+      <div class="card bg-c-blue order-card" (click)="selectCurso(curso.curId)">
+        <div class="card-block">
+          <h6 class="m-b-20">Codigo: {{curso.curCodigo}}</h6>
+          <h2 class="text-right"><i class="fa fa-graduation-cap f-left"></i><span>{{curso.curNombre}}</span>
+          </h2>
+          <div style="margin-bottom: 10px;">
+            <h3 class="val"><span class="f-right">{{curso.curFechainicio | date:
+                'dd/MM/yyyy'}}</span>Inicia</h3>
+            <h3 class="val"><span class="f-right">{{curso.curFechafin | date:
+                'dd/MM/yyyy'}}</span>Termina</h3>
+          </div>
+          <div style="margin-bottom: 10px;">
+          </div>
+        </div>
+      </div>
+    </div>
   </div>
+</div>
+<div class="container" style="background-color: #ffffff;">
+  <div class="container2" *ngIf="showContainer2">
+    <!-- Breadcrumb -->
+    <nav aria-label="breadcrumb" class="main-breadcrumb">
+      <ol class="breadcrumb">
+        <li class="breadcrumb-item"><a (click)="showContainer1 = true; showContainer2 = false;">Cursos</a></li>
+        <li class="breadcrumb-item"><a>Asistencia</a></li>
+      </ol>
+    </nav>
+    <!-- /Breadcrumb -->
+
+    <div class="row">
+      <div class="col-md-12 col-xl-12">
+        <div class="container" style="background-color: #ffffff;">
+          <h4>LISTADO DE ESTUDIANTES</h4>
+          <table class="table">
+            <thead>
+              <tr class="bg-primary text-light">
+                <th scope="col">Cédula</th>
+                <th scope="col">Nombre y apellido</th>
+                <th scope="col">Faltas</th>
+              </tr>
+            </thead>
+            <tbody>
+              <tr *ngFor="let item of participantes">
+                <td>{{ item.participante.parPersona?.cedula }}</td>
+                <td>{{ item.participante.parPersona?.apellido }} {{ item.participante.parPersona?.nombre }}</td>
+                <td>
+                  <input type="number" [(ngModel)]="item.asistencia.asiNumfaltas" class="form-control" min="0"
+                    pattern="[0-9]+" />
+                </td>
+
+              </tr>
+            </tbody>
+          </table>
+          <button (click)="registrarAsistencias()" class="btn btn-primary">Guardar asistencias</button>
+        </div>
+      </div>
+    </div>
+  </div>
+</div>
